Fixed letter alignment on zoomout

--- a/menu/menu.css
+++ b/menu/menu.css
@@ -64,12 +64,11 @@ body {
 }
 
 .grid {
-  margin-top: 20px;
+  margin: auto;
   display: grid;
   direction: rtl;
   grid-template-columns: repeat(7, 1fr);
   grid-row-start: -1;
-  flex: 1
 }
 
 .grid__item {
